examples/bad/option_arith.mko
fn main() {
    let o = Some(1)
    let x = o + 2
}
